crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_u_f_string_concat_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..22,
            value: FString(
                ExprFString {
                    range: 0..22,
                    value: FStringValue {
                        inner: MultiPart(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..9,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Unicode,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 10..18,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 12..17,
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 19..22,
                                        value: "!",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
