crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__raw_byte_literal_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..6,
            value: BytesLiteral(
                ExprBytesLiteral {
                    range: 0..6,
                    value: BytesLiteralValue {
                        inner: SinglePart(
                            BytesLiteral {
                                range: 0..6,
                                value: [
                                    92,
                                    92,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
