crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__string_parser_escaped_mac_eol.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..18,
                    value: StringLiteralValue {
                        inner: SinglePart(
                            StringLiteral {
                                range: 0..18,
                                value: "text more text",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
