crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__triple_quoted_raw_fstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: FString(
                ExprFString {
                    range: 0..11,
                    value: FStringValue {
                        inner: SinglePart(
                            FString(
                                FString {
                                    range: 0..11,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..8,
                                                expression: Name(
                                                    ExprName {
                                                        range: 6..7,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: true,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
